[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'EasyApp'
version = '0.8.0'
description = 'Collection of graphical components to quickly create cross-platform applications in the EasyScience universe.'
authors = [
  {name = 'Andrew Sazonov', email = 'andrew.sazonov@ess.eu'}
]
license = {file = 'LICENSE'}
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Other',
  'Programming Language :: Python :: 3',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX :: Linux'
]
requires-python = '>=3.11'
dependencies = [
  'PySide6>=6.8,<6.9' # Issue with TableView formatting in 6.9
]

[project.urls]
homepage = 'https://app.easyscience.software'
source = 'https://github.com/EasyScience/EasyApp'
tracker = 'https://github.com/EasyScience/EasyApp/issues'

[tool.hatch.build.targets.wheel]
packages = ['src/EasyApp']
